--- a/index.html
+++ b/index.html
@@ -22,35 +22,43 @@
             <section id="navBar">
                 <div class="sidenav">
                     <img id="photo" src="photo.jpg" alt="Girl">
+                    <a href="#">ABOUT</a>
                     <a href="#section_workexperience">WORK EXPERIENCE</a>
                     <a href="#section_education">EDUCATION</a>
                     <a href="#section_skills">SKILLS</a>
                     <a href="#section_languages">LANGUAGES</a>
-                    <a href="#section_about">ABOUT</a>
                   </div>
             </section>
         </article>
-        <article id="mainLeft">   
-            <section>
+        <article id="mainLeft">  
+            <section id="section_about">
+                <h2>ABOUT</h2>
+                <p>I’m an enthusiastic software engineer. I bring a comprehensive background in data science and software development to the table. With a primary education in Computer Engineering and a strong foundation in mathematics and statistical analysis, I possess the necessary skills to excel in the field. My unwavering passion lies in gaining industry experience and forging a successful solution architect implementing data centric software solutions. The UK's unique blend of educational, cultural, social, and technological experiences fascinates me, and I am eager to contribute my expertise in this vibrant environment.
+                    </p>
+            </section> 
+            <section id="section_contacts">
                 <h2>CONTACT</h2>
-                <p>
+                <div id="contact_details">
+                <p id="email">
                     <i class="fa fa-envelope" aria-hidden="true"></i>
-                    <a href="mailto:dilendra.sajini@gmail.com">dilendra.sajini@gmail.com</a>
+                    <a href="mailto:dilendra.sajini@gmail.com"><div id="highlighted">dilendra.sajini@gmail.com</div></a>
                 </p>
-                <p>
+                <p id="github">
                     <i class="fab fa-github" aria-hidden="true"></i>
-                    <a href="https://github.dev/DilendraSajini">DilendraSajini</a>
+                    <a href="https://github.dev/DilendraSajini"><div id="highlighted">DilendraSajini</div></a>
                 </p>
-                <p>
+                <p id="linkedln">
                     <i class="fab fa-linkedin" aria-hidden="true"></i>
-                    <a href="https://www.linkedin.com/in/dilendra-sajini/">dilendra-sajini</a>
+                    <a href="https://www.linkedin.com/in/dilendra-sajini/"><div id="highlighted">dilendra-sajini</div></a>
                 </p>
+            </div>
+                </section>
             </section>
             <section id="section_workexperience">
                 <h2>WORK EXPERIENCE</h2>
                 <h3>SENIOR SOFTWARE ENGINEER</h3>
                 <p>
-                    Cambio Software Engineering, Colombo, Sri Lanka. | October 2019 to September 2022
+                    Cambio Software Engineering, Colombo, Sri Lanka. | <div id="highlighted">October 2019 to September 2022 </div>
                 </p>
                 <p>
                 </p>
@@ -80,7 +88,7 @@
                 </ul>
                 <h3>SENIOR SOFTWARE ENGINEER</h3>
                 <p>
-                    Pearson Lanka (Pvt) Ltd., Colombo, Sri Lanka. | January 2019 to October 2019
+                    Pearson Lanka (Pvt) Ltd., Colombo, Sri Lanka. | <div id="highlighted">January 2019 to October 2019</div>
                 </p>
                 <p>
                 </p>
@@ -107,7 +115,7 @@
                 </ul>
                 <h3>SENIOR SOFTWARE ENGINEER</h3>
                 <p>
-                    W. D. R. Samarakoon Logistic Pvt. Colombo, Sri Lanka. | September 2017 to January 2019
+                    W. D. R. Samarakoon Logistic Pvt. Colombo, Sri Lanka. | <div id="highlighted">September 2017 to January 2019</div>
                 </p>
                 <p>
 
@@ -129,7 +137,7 @@
                 <h3>SENIOR SOFTWARE ENGINEER/ SOFTWARE ENGINEER</h3>
                 <p>
                     Aepona Software Pvt Limited, Persistent Systems (IoT Services), Intel Corporation, Colombo, Sri
-                    Lanka. | 2013 to September 2017
+                    Lanka. | 2013 to September 2017</div>
                 </p>
                 <p>
                 </p>
@@ -153,7 +161,7 @@
                 <h2>EDUCATION</h2>
                 <h3>MASTERS OF SCIENCE, SPECIALISING IN DATA SCIENCE, – ACCREDITED BY BCS </h3>
                 <p>
-                    Leeds Beckett University, Leeds, United Kingdom | 2022 September to present
+                    Leeds Beckett University, Leeds, United Kingdom | <div id="highlighted">2022 September to present</div>
                 </p>
                 Research led course with core modules including Data Analytics and Visualisation, Database Systems and
                 Approaches, Research Practice, Project Management, Data Warehouse Models and Approaches (DWMA),
@@ -199,13 +207,13 @@
                 </ul>
                 <h3>MASTERS OF SCIENCE SPECIALISING IN SOFTWARE ARCHITECTURE. (3.52/4.2 GPA) </h3>
                 <p>
-                    University of Moratuwa, Colombo, Sri Lanka. | 2015 to 2017
+                    University of Moratuwa, Colombo, Sri Lanka. | <div id="highlighted">2015 to 2017</div>
                 </p>
                 <p>
                 </p>
                 <h3>BACHELOR OF COMPUTER SCIENCE ENGINEERING, SPECIALISING IN COMPUTER ENGINEERING. (3.15/4.0 GPA) </h3>
                 <p>
-                    University of Peradeniya, Kandy, Sri Lanka. | 2008 to 2013
+                    University of Peradeniya, Kandy, Sri Lanka. | <div id="highlighted">2008 to 2013</div>
                 </p>
                 <p>
                 </p>
@@ -257,10 +265,6 @@
             <section id="section_languages">
                 <h2>LANGUAGES</h2>
                 <h3>English : IELTS CEFR Level B2 </h3>
-            </section>
-            <section id="section_about">
-                <h2>ABOUT</h2>
-                <!-- about you -->
             </section>
         </article>
     </main>
