--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <section id="navBar">
                 <div class="sidenav">
                     <img id="photo" src="photo.jpg" alt="Girl">
-                    <a href="#">ABOUT</a>
+                    <a id="about" href="#">ABOUT</a>
                     <a href="#section_workexperience">WORK EXPERIENCE</a>
                     <a href="#section_education">EDUCATION</a>
                     <a href="#section_skills">SKILLS</a>
@@ -205,13 +205,13 @@
                         feedback.
                     </li>
                 </ul>
-                <h3>MASTERS OF SCIENCE SPECIALISING IN SOFTWARE ARCHITECTURE. (3.52/4.2 GPA) </h3>
+                <h3>MASTERS OF SCIENCE SPECIALISING IN SOFTWARE ARCHITECTURE.  </h3><span>(3.52/4.2 GPA) </span>
                 <p>
                     University of Moratuwa, Colombo, Sri Lanka. | <div id="highlighted">2015 to 2017</div>
                 </p>
                 <p>
                 </p>
-                <h3>BACHELOR OF COMPUTER SCIENCE ENGINEERING, SPECIALISING IN COMPUTER ENGINEERING. (3.15/4.0 GPA) </h3>
+                <h3>BACHELOR OF COMPUTER SCIENCE ENGINEERING, SPECIALISING IN COMPUTER ENGINEERING.</h3> <span>(3.15/4.0 GPA) </span>
                 <p>
                     University of Peradeniya, Kandy, Sri Lanka. | <div id="highlighted">2008 to 2013</div>
                 </p>
@@ -264,7 +264,7 @@
             </section>
             <section id="section_languages">
                 <h2>LANGUAGES</h2>
-                <h3>English : IELTS CEFR Level B2 </h3>
+                <p>English : IELTS CEFR Level B2 </p>
             </section>
         </article>
     </main>
