--- a/index.html
+++ b/index.html
@@ -22,57 +22,61 @@
 </head>
 
 <body>
-    <header>
-        <h1 id="name">DILENDRA SAJINI</h1>
-        <div id="address_details">
-            Barnsley, United Kingdom. +447778996009
-        </div>
+    <header id="header">
+        <section id="leftHeader">
+        </section>
+        <section id="rigtHeader">
+            <h1 id="name">DILENDRA SAJINI</h1>
+            <div id="address_details">
+                Barnsley, United Kingdom. +447778996009
+            </div>
+        </section>
     </header>
     <main id="mainBody">
         <article id="maskSide">
             <article id="mainSide">
-            <br>
-            <section id="picture">
-                <img id="photo" src="photo.PNG">
-            </section>
-            <section id="navBar">
-                <nav class="navbar navbar-dark bg-dark">
-                    <div class="navbar-collapse" id="navbarNav">
-                        <ul class="navbar-nav">
-                            <li class="nav-item active">
-                                <a href="#sectionWorkexperience">WORK EXPERIENCE</a>
-                            </li>
-                            <li class="nav-item">
-                                <a href="#sectionEducation">EDUCATION</a>
-                            </li>
-                            <li class="nav-item">
-                                <a href="#sectionProjects">PROJECTS</a>
-                            </li>
-                            <li class="nav-item">
-                                <a href="#sectionVolunteer">VOLUNTEER</a>
-                            </li>
-                            <li class="nav-item">
-                                <a href="#sectionSkills">SKILLS</a>
-                            </li>
-                            <li class="nav-item">
-                                <a href="#sectionLanguages">LANGUAGES</a>
-                            </li>
-                            <li class="nav-item">
-                                <a href="docs/assets/SERVICE LETTERS.pdf" target="_blank">SERVICE LETTERS</a>
-                            </li>
-                            <br>
-                            <li class="nav-item">
-                                <a href="docs/assets/DILENDRA WIJESINGHE.pdf" download="DILENDRA WIJESINGHE.pdf">
-                                    <button class="btn">Download Resume</button>
-                                </a>
-                            </li>
+                <br>
+                <section id="picture">
+                    <img id="photo" src="photo.PNG">
+                </section>
+                <section id="navBar">
+                    <nav class="navbar navbar-dark bg-dark">
+                        <div class="navbar-collapse" id="navbarNav">
+                            <ul class="navbar-nav">
+                                <li class="nav-item active">
+                                    <a href="#sectionWorkexperience">WORK EXPERIENCE</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a href="#sectionEducation">EDUCATION</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a href="#sectionProjects">PROJECTS</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a href="#sectionVolunteer">VOLUNTEER</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a href="#sectionSkills">SKILLS</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a href="#sectionLanguages">LANGUAGES</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a href="docs/assets/SERVICE LETTERS.pdf" target="_blank">SERVICE LETTERS</a>
+                                </li>
+                                <br>
+                                <li class="nav-item">
+                                    <a href="docs/assets/DILENDRA WIJESINGHE.pdf" download="DILENDRA WIJESINGHE.pdf">
+                                        <button class="btn">Download Resume</button>
+                                    </a>
+                                </li>
 
-                        </ul>
-                    </div>
-                </nav>
-            </section>
+                            </ul>
+                        </div>
+                    </nav>
+                </section>
+            </article>
         </article>
-    </article>
         <article id="mainLeft">
             <section id="animation">
                 <div class="text-wrapper">
@@ -302,38 +306,44 @@
                 <br>
                 <div>
                     <a href="https://dissertation-zejrc29dctwmetafszbaaw.streamlit.app/" id="reference">
-                        <i class="fa fa-home" aria-hidden="true"></i>
+                        <i class="fab fa-researchgate" aria-hidden="true"></i>
                     </a>
                     <h3 id="parent">Leveraging deep learning and medical image analysis for enhanced cancer diagnosis
                         <span id="highlightedDate">2023</span>
                     </h3>
                     <p>
                         Enhance the accuracy and efficiency of breast cancer classification in high-resolution histology
-                        images through the utilisation of patch-based image analysis, incorporating VGG16 transfer learning
+                        images through the utilisation of patch-based image analysis, incorporating VGG16 transfer
+                        learning
                         and LSTM sequential data processing model while preserving global context for structures and
                         features.
                     </p>
                     <br>
-                    <a href="https://www.researchgate.net/publication/369170852_Generic_IoT_Terminal_For_Program_A_SOC" id="reference">
+                    <a href="https://www.researchgate.net/publication/369170852_Generic_IoT_Terminal_For_Program_A_SOC"
+                        id="reference">
                         <i class="fab fa-researchgate" aria-hidden="true"></i>
                     </a>
                     <h3 id="parent">Generic IoT terminal for program a SOC
                         <span id="highlightedDate">2017</span>
                     </h3>
                     <p>
-                        A user-friendly remote programmable GUI environment for smart homeowners, featuring a cost-effective
+                        A user-friendly remote programmable GUI environment for smart homeowners, featuring a
+                        cost-effective
                         and energy-efficient design that received the 2017 National Best Quality ICT Awards.
                     </p>
                     <br>
-                    <a href="https://www.researchgate.net/publication/369170939_A_Web-Based_Content-Based_Image_Retrieval_System" id="reference">
+                    <a href="https://www.researchgate.net/publication/369170939_A_Web-Based_Content-Based_Image_Retrieval_System"
+                        id="reference">
                         <i class="fab fa-researchgate" aria-hidden="true"></i>
                     </a>
                     <h3 id="parent">Web-based content-based image retrieval system
                         <span id="highlightedDate">2013</span>
                     </h3>
                     <p>
-                        A Content-Based Image Retrieval (CBIR) system, aiming to overcome the limitations of keyword-based
-                        image retrieval by addressing semantic gaps, utilising clustering techniques to enhance efficiency
+                        A Content-Based Image Retrieval (CBIR) system, aiming to overcome the limitations of
+                        keyword-based
+                        image retrieval by addressing semantic gaps, utilising clustering techniques to enhance
+                        efficiency
                         and accuracy.
                     </p>
                 </div>
@@ -344,15 +354,17 @@
                 <h2><i class="fas fa-heart" aria-hidden="true"></i> Volunteer and Professional Development</h2>
                 <br>
                 <div>
-                <p>Volunteer for Barnsley Hospital NHS Foundation Trust.</p> 
-                <p>Following STEMAspire female mentorship program for 9 months. </p> 
-                <p>Volunteer as a course representative for 1 year in Masters of Data Science at Leeds Beckett University. </p> 
+                    <p>Volunteer for Barnsley Hospital NHS Foundation Trust.</p>
+                    <p>Following STEMAspire female mentorship program for 9 months. </p>
+                    <p>Volunteer as a course representative for 1 year in Masters of Data Science at Leeds Beckett
+                        University. </p>
                 </div>
             </section>
             <section id="sectionSkills">
                 <br>
                 <br>
                 <h2><i class="fa fa-cogs" aria-hidden="true"></i> SKILLS</h2>
+                <br>
                 <ul id="skillsUl">
                     <li>Java</li>
                     <li>Spring Boot</li>
@@ -407,6 +419,7 @@
                 <br>
                 <br>
                 <h2><i class="fa fa-language" aria-hidden="true"></i> LANGUAGES</h2>
+                <br>
                 <p>English : IELTS CEFR Level B2 </p>
             </section>
         </article>
