--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400;500&display=swap" rel="stylesheet" />
-    <link rel="stylesheet" href="mobile_style.css" media="screen and (max-width: 576px)" />
+    <link rel="stylesheet" href="mobile_style.css" media="screen and (max-width: 900px)" />
     <link rel="stylesheet" href="desktop_style.css" media="screen and (min-width: 900px)" />
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="sidebar.css">
@@ -258,16 +258,15 @@
                     <br>
                     <h3>Associate Technical Lead</h3>
                     <p id="parent">
-                        W. D. R. Samarakoon Logistic Pvt. Colombo, Sri Lanka.
+                        W. D. R. Samarakoon Logistic (Pvt) Ltd., Colombo, Sri Lanka.
                         <span id="highlightedDate">September 2017 to January 2019</span>
                     </p>
                     <br>
                     <br>
                     <h3>Senior Software Engineer | Software Engineer</h3>
                     <p id="parent">
-                        Aepona Software Pvt Limited, Persistent Systems (IoT Services), Intel Corporation, Colombo,
-                        Sri
-                        Lanka.
+                        Aepona Software (Pvt) Ltd., Persistent Systems (IoT Services), Intel Corporation, Colombo,
+                        SriLanka.
                         <span id="highlightedDate">2013 to September 2017</span>
                     </p>
                 </div>
