Modify image size according to the mobile friendly

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
             <article id="mainSide">
                 <br>
                 <section id="picture">
+                    <img id="photo" src="photo.PNG">
                 </section>
                 <section id="navBar">
                     <nav class="navbar navbar-dark bg-dark">
