--- a/index.html
+++ b/index.html
@@ -20,18 +20,15 @@
 </head>
 
 <body>
-    <div id="header" class="container text-center col-sm-12">
-        <div class="row" id="rigtHeader">
-            <div class="col-sm-8 offset-sm-3">
-                <h1 id="name">DILENDRA SAJINI</h1>
-            </div>
-            <div class="col-sm-8 offset-sm-3">
-                Barnsley, United Kingdom. +447778996009
-            </div>
+    <div class="container col-sm-12"" id=" rigtHeader">
+        <div class="row col-sm-8 offset-sm-3  justify-content-center">
+            <h1 id="name">DILENDRA SAJINI</h1>
         </div>
-        <div class="row" id="maskHeader">
+        <div class=" row col-sm-8 offset-sm-3  justify-content-center">
+            Barnsley, United Kingdom. +447778996009
         </div>
     </div>
+
     <main class="conatiner col-sm-12" id="mainBody">
         <div class="row">
             <div class="col-sm-3">
@@ -107,7 +104,7 @@
                 <div class="row mb-4 col-sm-12">
                     <h2><i class="fas fa-address-book" aria-hidden="true"></i> CONTACTS</h2>
                 </div>
-                
+
                 <div id="contacts" class="row mb-4 col-sm-12 ">
                     <div class="col-4 d-flex justify-content-center">
                         <p id="email">
@@ -131,7 +128,7 @@
                         </p>
                     </div>
                 </div>
-                <div id="experties-h"class="row mb-4 col-sm-12">
+                <div id="experties-h" class="row mb-4 col-sm-12">
                     <h2><i class="fa fa-cogs" aria-hidden="true"></i> EXPERTIES</h2>
                 </div>
                 <div id="experties" class="row col-sm-12 mb-4">
