--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <div class="row">
             <div class="col-sm-3">
                 <div id="photo-row" class="row col-sm-12">
-                    <img id="photo" src="photo.PNG">
+                    <img id="photo" src="docs/assets/photo.PNG">
                 </div>
                 <nav id="navBar" class="row navbarrow col-sm-12">
                     <div class="navbar-collapse" id="navbarNav">
@@ -146,55 +146,33 @@
                             <div id="collapseOne" class="collapse hide" aria-labelledby="headingOne"
                                 data-parent="#accordion">
                                 <div id="card-body" class="card-body">
-                                    With three years of expertise in
-                                    front-end
-                                    development including SPA using <b>Angular</b> with <b>NgRx</b> and
-                                    <b>React</b>
-                                    with <b>Redux</b> frameworks, I bring extensive experience from
-                                    various
-                                    domains,
-                                    including healthcare information systems, cloud-based learning
-                                    platforms, and
-                                    transportation systems. My skill set extends to <b>MEAN stack</b>
-                                    (Mongo
-                                    DB,
-                                    Express.js, Angular, Node.js) development and the successful
-                                    deployment
-                                    of
-                                    applications on <b>AWS EC2</b> instances. I specialize in real-time
-                                    data
-                                    communication, utilizing various messaging protocols like
-                                    <b>PUBNUB</b>
-                                    and
-                                    <b>MQTT</b> with the <b>Mosquito</b> broker.
-                                    Notably, I've developed two Android applications that facilitate
-                                    seamless
-                                    interaction between truck drivers and customers within this
-                                    ecosystem.
-                                    My
-                                    approach to SPA development revolves around creating modular and
-                                    responsive UI
-                                    components while ensuring efficient application state management
-                                    through
-                                    <b>NgRx</b> and <b>Redux</b>. I excel in managing asynchronous data
-                                    fetching,
-                                    handling events, and effectively managing side effects, all while
-                                    prioritizing
-                                    performance optimization techniques such as pagination and lazy
-                                    loading.
-                                    My commitment to code quality shines through my emphasis on reusable
-                                    component
-                                    design, reducing code duplication, and ensuring long-term
-                                    maintainability. I
-                                    consider unit testing and efficient dependency management as
-                                    fundamental
-                                    components of my development process. I possess a well-rounded skill
-                                    set
-                                    and a
-                                    proven track record of delivering SPAs that meet stringent
-                                    performance
-                                    and
-                                    usability standards.
+                                    With 6 years of experience in <b>Java
+                                        back-end development</b>, specializing in the <b>Spring framework</b> and
+                                    <b>Java 8</b>, I have actively contributed to healthcare information systems,
+                                    cloud-based learning platforms, and telecommunications projects. My expertise
+                                    extends to <b>microservices architecture</b>, where I successfully restructured
+                                    legacy backends into microservices, emphasizing <b>REST APIs</b> and
+                                    message-driven architecture to enhance scalability and maintainability. My
+                                    commitment to quality is evident in achieving an impressive 80% unit and
+                                    integration test coverage with tools like <b>JUnit</b>, non-functional
+                                    performance testing , memory <b>(Jprofiler)</b> and database profiling <b>
+                                        (SQLProfiler) </b>. I adhere to clean code best practices, emphasizing
+                                    backward compatibility and maximizing object-oriented design patterns for code
+                                    reusability. My diverse technology stack includes <b>EJB 2 development</b>,
+                                    <b>Spring</b>, <b>Spring Boot</b>, <b>Swagger with OpenAPI</b>, relational and
+                                    document databases (<b>SQL, MongoDB, CouchDB</b>), <b>Hibernate</b>, <b>Apache
+                                        Maven</b>, and <b>Gradle build tools</b>. I bring Agile best practices to
+                                    the table, embracing <b>CI/CD</b> for efficient development cycles.
+                                    Additionally, I have two years of experience in IoT-focused transportation
+                                    truck-connecting app development, utilizing technologies such as <b>PubNub</b>,
+                                    <b>MQTT messaging</b>, and <b>AWS EC2 instance deployment</b>. I've also
+                                    strengthened security and user-friendliness by integrating <b>Mobile Connect</b>
+                                    into core ASE products, implementing <b>OAuth2</b> and <b>JWT tokens</b>.
+                                    Furthermore, my role included finalizing upfront requirements and technical
+                                    specifications for <b>OpenStack Gateway</b>, acting as middleware to translate
+                                    between OpenStack cloud operating system APIs and native
+                                    <b>Infrastructure-as-a-Service</b>. My diverse skill set and extensive
+                                    experience make me a valuable asset for any software development team.
                                 </div>
                             </div>
                         </div>
@@ -423,7 +401,7 @@
                     <div class="row col-sm-12">
                         <div class="col-10 mb-4">
                             <h4>Bachelor of the Science of Engineering (BSc) (Hons) Specializing in Computer
-                                Engineering
+                                Engineering </h4>
                                 University of Peradeniya, Kandy, Sri Lanka.
                         </div>
                         <div id="highlightedDate" class="col-2">
@@ -468,6 +446,8 @@
                                 id="reference">
                                 <i class="fab fa-researchgate" aria-hidden="true"></i>
                             </a>
+                            <h4 id="parent">Generic IoT terminal for program a SOC
+                            </h4>
                             <p>
                                 A user-friendly remote programmable GUI environment for smart homeowners, featuring
                                 a
@@ -486,6 +466,8 @@
                                 id="reference">
                                 <i class="fab fa-researchgate" aria-hidden="true"></i>
                             </a>
+                            <h4 id="parent">Web-based content-based image retrieval system
+                            </h4>
                             <p>
                                 A Content-Based Image Retrieval (CBIR) system, aiming to overcome the limitations of
                                 keyword-based
