--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <div class="row">
             <div class="col-sm-3">
                 <div id="photo-row" class="row col-sm-12">
-                    <img id="photo" src="docs/assets/photo.PNG">
+                    <img id="photo" src="docs/assets/photo.jpg">
                 </div>
                 <nav id="navBar" class="row navbarrow col-sm-12">
                     <div class="navbar-collapse" id="navbarNav">
